--- a/Css e grid/style.css
+++ b/Css e grid/style.css
@@ -1,53 +1,49 @@
-@charset "UTF-8";
+@charset "UFT-8";
 
 body, ul, li, p {
     margin: 0px;
     padding: 0px;
     list-style: none;
-    font-size: 1,2em;
     font-family: arial;
 }
 body {
     margin-bottom: 100px;
 }
-
 h1 {
     text-align: center;
     margin: 100px;
 }
-
 img {
     max-width: 100%;
     display: block;
 }
-
+div img, p {
+    text-align: center;
+}
 a {
     text-decoration: none;
-    color: white;
+    color: black;
 }
-
 header {
-    background: #1A1E20;
+    background: grey;
     display: flex;
     justify-content: space-between;
     padding: 20px;
     flex-wrap: wrap;
     align-items: center;
 }
-
 .menu {
     display: flex;
 }
 .menu li {
     margin-left: 30px;
-
 }
-.menu li a {
+.menu li {
     display: block;
     padding: 10px;
-} 
+}
 
-/* css flexbox */
+/* Css flexbox */ 
 
 .flex {
     display: flex;
@@ -59,43 +55,47 @@ header {
     flex: 1 1 200px;
     margin: 10px;
 }
-
-/* CSS GRID 1 */
+      /* css e grid */
 
 .grid1 {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     max-width: 780px;
     margin: 0 auto;
-    grid-gap: 20px;
+    grid-gap:20px;
+
+
 }
 .grid1 > div:nth-child(n + 4) {
-   display: grid;
-   grid-template-columns: 1fr 1fr;
-   grid-gap: 10px;
-   align-items: center;
+  
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 10px;
+    align-items: center;
+    
 }
-.grid1 >div.Anúncio {
+.grid1 > div.anuncio {
     grid-column: 1;
     grid-row: 2 / 5;
-    border-top: 10px solid tomato;
+    border-top: 10px solid ;
     display: block;
+   
 }
-@media (max-width: 600px) {
+@media (max-width: 600px){
     .grid1 {
         grid-template-columns: repeat(2, 1fr);
     }
-    .grid1 > div:nth-child(n + 4) {
+    .grid1 > div:nth-child(n + 4){
         display: block;
     }
-    .grid1 > div.Anúncio {
+    .grid1 > div.anuncio {
         grid-column: auto;
         grid-row: auto;
         order: -1;
     }
 }
 
-/* CSS GRID 2 */
+          /* css grid 2 */
 
 .grid2 {
     display: grid;
@@ -109,20 +109,20 @@ header {
     margin-bottom: 10px;
 }
 @media (max-width: 600px) {
-    .grid2{
+    .grid2 {
         grid-template-columns: 1fr;
-    } 
+    }
     .sidebar {
         display: flex;
         overflow: scroll;
     }
     .sidebar > div {
         flex: 1 0 200px;
-        margin: 0 10px;
+        margin:0 10px;
     }
 }
 
-/* CSS GRID 3*/
+/* css grid 3 */
 
 .grid3 {
     display: grid;
@@ -132,6 +132,7 @@ header {
     max-width: 800px;
     padding: 10px;
 }
+
 .grid3-item:nth-child(1) {
     grid-row: 1 / 3;
 }
@@ -145,7 +146,6 @@ header {
     grid-row: 1/3;
     align-self: end;
 }
-
 .grid3-item p {
     background: rgba(0, 0, 0, 0.6);
     padding: 10px;
@@ -153,4 +153,5 @@ header {
     grid-column: 1;
     grid-row: 2;
     align-self: end;
+
 }
